# Homulib

./: ADSR.cpp  ADSR.h  BrownNoiseGenerator.cpp  BrownNoiseGenerator.h  CMakeLists.txt  Generators.cpp  Generators.h  Makefile  PinkNoiseGenerator.cpp  README.md  SawGenerator.cpp  SawGenerator.h  SinusGenerator.h  WhiteNoiseGenerator.cpp  example.c  example.cpp  ringbuffer.cpp  ringbuffer.h  test.cpp
doc/html/: ADSR_8h_source.html  BrownNoiseGenerator_8h_source.html  BrownNoise_8h_source.html  Delay_8h_source.html  Distortion_8h_source.html  Generators_8h_source.html  KarplusStrongGenerator_8h_source.html  KarplusStrong_8h_source.html  PinkNoiseGenerator_8h_source.html  PinkNoise_8h_source.html  SampleRate_8h_source.html  SinewaveGenerator_8h_source.html  Sinewave_8h_source.html  SquareGenerator_8h_source.html  Square_8h_source.html  TriangleGenerator_8h_source.html  Triangle_8h_source.html  WhiteNoiseGenerator_8h_source.html  WhiteNoise_8h_source.html  annotated.html  classes.html  classhomu_1_1ADSR-members.html  classhomu_1_1ADSR.html  classhomu_1_1Basegen-members.html  classhomu_1_1Basegen.html  classhomu_1_1BrownNoise-members.html  classhomu_1_1BrownNoise.html  classhomu_1_1BrownNoiseGenerator-members.html  classhomu_1_1BrownNoiseGenerator.html  classhomu_1_1Delay-members.html  classhomu_1_1Delay.html  classhomu_1_1Distortion-members.html  classhomu_1_1Distortion.html  classhomu_1_1Effect-members.html  classhomu_1_1Effect.html  classhomu_1_1Envelope-members.html  classhomu_1_1Envelope.html  classhomu_1_1Generator-members.html  classhomu_1_1Generator.html  classhomu_1_1KarplusStrong-members.html  (+32 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  search.js
headers/: ADSR.h  AllPass.h  BrownNoise.h  Delay.h  Distortion.h  Generators.h  KS_ext_filters.h  KarplusStrong.h  KarplusStrongBattery.h  KarplusStrongFilter.h  SampleRate.h  Square.h  WhiteNoise.h  cwrapper.h  ringbuffer.h
headers/util/: constants.h
include/: ADSR.h  AllPass.h  BrownNoise.h  Delay.h  Distortion.h  Generators.h  KS_ext_filters.h  KarplusStrong.h  KarplusStrongBattery.h  KarplusStrongFilter.h  PinkNoise.h  Reverb.h  Sinewave.h  Square.h  Triangle.h  WhiteNoise.h  cwrapper.h
include/util/: constants.h
src/: ADSR.cpp  ADSR.h  AllPass.cpp  BrownNoise.cpp  BrownNoise.h  BrownNoiseGenerator.cpp  BrownNoiseGenerator.h  CMakeLists.txt  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Generators.cpp  Generators.h  KS_ext_filters.cpp  KarplusStrong.cpp  KarplusStrong.h  KarplusStrongBattery.cpp  KarplusStrongFilter.cpp  KarplusStrongGenerator.cpp  KarplusStrongGenerator.h  Makefile  PinkNoise.cpp  PinkNoise.h  PinkNoiseGenerator.cpp  PinkNoiseGenerator.h  Reverb.cpp  SampleRate.cpp  Sinewave.cpp  Sinewave.h  SinewaveGenerator.cpp  SinewaveGenerator.h  SinusGenerator.cpp  Square.cpp  Square.h  SquareGenerator.cpp  SquareGenerator.h  Triangle.cpp  Triangle.h  TriangleGenerator.cpp  (+9 more)
tests/: ADSRTest.cpp  SinewaveTest.cpp  SquareTest.cpp  TriangleTest.cpp
